db with backend

--- a/daily_reports/20250321.md
+++ b/daily_reports/20250321.md
@@ -1,1 +1,57 @@
-Reconfigure the database 
+I've integrated the PostgreSQL database with the OCR Lab Azure Functions API. All major API endpoints now interact with the database for persistent storage and retrieval of:
+
+- User data 
+- Folder management
+- File metadata
+- Processing status
+- Search functionality
+- Usage statistics
+
+### How to Test With Your Own Data
+
+To test the OCR Lab application with your custom data, follow these steps:
+
+1. **Create a user and folder**:
+   ```bash
+   curl -X POST http://localhost:7071/api/folders \
+     -H "x-user-id: YOUR_USER_ID" \
+     -H "x-user-email: YOUR_EMAIL" \
+     -H "Content-Type: application/json" \
+     -d "{\"name\":\"YOUR_FOLDER_NAME\"}"
+   ```
+
+2. **Upload your PDF document**:
+   ```bash
+   curl -X POST http://localhost:7071/api/upload \
+     -H "x-user-id: YOUR_USER_ID" \
+     -H "x-folder-id: FOLDER_ID" \
+     -F "file=@PATH_TO_YOUR_FILE.pdf" \
+     -H "x-file-name: YOUR_FILENAME.pdf"
+   ```
+
+3. **Check processing status**:
+   ```bash
+   curl -X GET http://localhost:7071/api/processing-status/FILE_ID \
+     -H "x-user-id: YOUR_USER_ID"
+   ```
+
+4. **Run a search query**:
+   ```bash
+   curl -X POST http://localhost:7071/api/query \
+     -H "x-user-id: YOUR_USER_ID" \
+     -H "Content-Type: application/json" \
+     -d "{\"query\":\"YOUR_SEARCH_TERM\", \"top\":5}"
+   ```
+
+5. **View usage statistics**:
+   ```bash
+   curl -X GET http://localhost:7071/api/usage \
+     -H "x-user-id: YOUR_USER_ID"
+   ```
+
+6. **List files in a folder**:
+   ```bash
+   curl -X GET "http://localhost:7071/api/files?folder_id=FOLDER_ID" \
+     -H "x-user-id: YOUR_USER_ID"
+   ```
+Replace the placeholders (YOUR_USER_ID, YOUR_EMAIL, etc.) with your actual data to test the application with your own content.
